k8s/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: distopia-redis
  namespace: distopia
spec:
  selector:
    app.kubernetes.io/name: distopia-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
